# logbook-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
logbook_cli/: __main__.py  cli.py  managers.py  utils.py
src/: cli.py  managers.py  models.py  utils.py
tests/: test_logbook_cli.py
